# strands-multi-engineer-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
agent/: cli.py  config.py  prompts.py  workflow.py
content/: medium_notes.md
eval/: metrics.py  result_schema.py
providers/: base_provider.py  provider_config.py
sample_repos/tiny_fastapi_app/: main.py  requirements.txt  test_main.py
sample_repos/tiny_node_service/: index.js  package.json  test.js
scripts/: bootstrap.sh  reset_sample_repo.sh
tasks/: issues.yaml  task_runner.py
tools/: patch_writer.py  repo_reader.py  search_tools.py  test_runner.py
